kubernetes/duplicati/duplicati-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  namespace: om
spec:
  selector:
    app: duplicati
  type: ClusterIP
  ports:
  - name: duplicati
    protocol: TCP
    port: 80
    targetPort: 8200
